[metadata]
name = robusta
version = attr: robusta.__version__
author = Evgenia Rusak, Steffen Schneider, George Pachitariu
author_email = steffen@bethgelab.org
description = A pytorch package for robustness and adaptation research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bethgelab/robustness
project_urls =
    Bug Tracker = https://github.com/bethgelab/robustness/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
where =
    - .
install_requires =
    torch
    torchvision
    numpy
    tqdm

python_requires = >=3.8
